[tool.poetry]
authors = ["Ben Soyka <hello@bsoyka.me>"]
description = "Command-line interface for the BenBucks currency"
name = "benbucks-cli"
packages = [{include = "benbucks_cli"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
benbucks-core = {git = "https://github.com/bsoyka/benbucks-core"}
python = "^3.11"
rich-click = "^1.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
bb = "benbucks_cli:main"
benbucks = "benbucks_cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"
